Button list overflow fix
Ensure that excessively long performer button lists don't overflow page / addTicketElement div

--- a/www/css/ticket.less
+++ b/www/css/ticket.less
@@ -111,6 +111,10 @@ div.manage {
     }
   }
 
+  div.addTicketOuter {
+    margin-bottom: 80px;
+  }
+
   div.addTicket {
     min-height: 500px;
 
